Fix spacing in moblie nav + remove top arrow nav item

--- a/styles/BarDesktop.scss
+++ b/styles/BarDesktop.scss
@@ -1,7 +1,6 @@
 .barDesktop,
 .barDesktop__logo {
   display: none;
- 
 }
 
 @media (min-width: 1024px) {
@@ -25,7 +24,6 @@
     transform: translateX(-50%);
   }
   .barDesktop__socials {
-
     .brDesktop__socials--icons {
       display: flex;
       justify-content: left;
@@ -58,7 +56,7 @@
 
     .nav__item {
       font-size: 2.5vh;
-      margin: auto .7vw;
+      margin: auto 0.7vw;
 
       .nav__link {
         font-weight: 400;
