--- a/styles/Nav.scss
+++ b/styles/Nav.scss
@@ -12,7 +12,7 @@
     text-align: center;
     font-size: 2em;
     width: 100vw;
-    margin-top: 10vh;
+    margin-top: 9vh;
   }
 
   .nav__item {
@@ -25,7 +25,7 @@
   .nav__social {
     display: inline-block;
     position: static;
-    padding-bottom: 2vh;
+    padding-bottom: .5vh;
   }
 
   .socials__icon {
@@ -34,7 +34,7 @@
 
   .nav__tui {
     width: 10vw;
-    margin-bottom: 1vh;
+    margin-bottom: 0;
     transform: rotate(-20deg);
   }
 }
